# header-only-demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: greetings.hpp
python/: sayHello.py
